# pyBPE

./: .gitignore  CMakeLists.txt  README.md  basic_text.cpp  fast  fast.cpp  requirements.txt  setup.cfg
pybpe/: __init__.py  pybpe  pybpe.py
pybpe/test/: conftest.py  test_bpe.py
pybpe/test/fixtures/: codes  input  out  vocab
test/: commands.sh
