# pytest pycodestyle configuration
[tool:pytest]
codestyle_max_line_length = 120
codestyle_ignore =
    E251
    W504

[metadata]
description-file = README.md
license_file = LICENSE


[pylama]
linters = mccabe,pycodestyle,pyflakes
ignore = D203,

[pylama:pycodestyle]
max_line_length = 120
exclude = ./build,./models,./logs,./data,./checkpoints

[pycodestyle]
max_line_length = 120
exclude = ./build,./models,./logs,./data,./checkpoints

[mypy]
ignore_missing_imports = true

